--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
 <div class="floating-cta" id="ctaBox">
   <span class="close-btn" onclick="document.getElementById('ctaBox').style.display='none'">✖</span>
   <span class="cta-message"></span>
-  <a href="1000paid-cousilling.html" class="cta-button">EAMPCET Counseling Support</a>
+  <a href="1000paid-cousilling.html" class="cta-button">EAPCET Counseling Support</a>
 </div>
 
 
@@ -997,7 +997,13 @@
   { name: "BITSAT Exam", link: "10BITSAT.html", icon: "🎯", desc: "Birla Institute of Technology Admission Test details." },
   { name: "Anurag University", link: "121-ts-anurag-university.html", icon: "🏫", desc: "Anurag University – course, fees, placement info." },
   
-  { name: "College Profile Template", link: "1003-college-profile.html", icon: "📄", desc: "Sample layout for individual college profiles." }
+  { name: "College Profile Template", link: "1003-college-profile.html", icon: "📄", desc: "Sample layout for individual college profiles." },
+    {
+  name: "TS EAPCET All Engineering Colleges List",
+  link: "150-eamcet-all-colleges.html",
+  icon: "📄",
+  desc: "Complete list of all engineering colleges in Telangana under TS EAPCET."
+}
 
 
 
