--- a/23-IIT-index.html
+++ b/23-IIT-index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Top IIITs in India | Balanju Consultancy</title>
+  <title>Top IITs in India | Balanju Consultancy</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     :root {
-      --primary-color: #1565c0;
-      --secondary-color: #0d47a1;
-      --accent-color: #25D366;
-      --text-dark: #1a237e;
-      --text-light: #e3f2fd;
-      --bg-light: #e3f2fd;
-      --white: #ffffff;
-      --hover-color: #bbdefb;
+      --primary-color: #0F4C81;  /* Deep blue */
+      --secondary-color: #E67E22; /* Orange */
+      --accent-color: #2980B9;   /* Lighter blue */
+      --text-dark: #2C3E50;
+      --text-light: #ECF0F1;
+      --bg-light: #F5F7FA;
+      --white: #FFFFFF;
+      --hover-color: #D4E6F1;
       --shadow: 0 4px 12px rgba(0,0,0,0.1);
       --transition: all 0.3s ease;
     }
@@ -28,19 +28,19 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: var(--bg-light);
-      color: var(--secondary-color);
+      color: var(--text-dark);
       line-height: 1.6;
     }
 
     header {
-      background-color: var(--primary-color);
+      background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
       color: var(--white);
       padding: 1.5rem 0;
       text-align: center;
       font-size: clamp(1.5rem, 4vw, 2.2rem);
       font-weight: bold;
       letter-spacing: 1px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: var(--shadow);
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -61,7 +61,7 @@
 
     .intro h2 {
       font-size: clamp(1.3rem, 3vw, 1.8rem);
-      color: var(--secondary-color);
+      color: var(--primary-color);
       margin-bottom: 1rem;
     }
 
@@ -77,7 +77,7 @@
       max-width: 500px;
       margin: 1rem auto;
       padding: 0.8rem 1.2rem;
-      border: 1px solid #ccc;
+      border: 2px solid var(--secondary-color);
       border-radius: 50px;
       font-size: 1rem;
       outline: none;
@@ -86,7 +86,7 @@
 
     .search-box:focus {
       border-color: var(--primary-color);
-      box-shadow: 0 0 0 3px rgba(21, 101, 192, 0.2);
+      box-shadow: 0 0 0 3px rgba(231, 126, 34, 0.2);
     }
 
     .college-list {
@@ -95,14 +95,17 @@
       box-shadow: var(--shadow);
       margin: 2rem auto;
       overflow: hidden;
+      border: 1px solid #DFE6E9;
     }
 
     .college-list h3 {
       font-size: clamp(1.2rem, 3vw, 1.5rem);
       margin-bottom: 1rem;
-      color: var(--secondary-color);
+      color: var(--primary-color);
       text-align: center;
       padding: 1.2rem 1rem 0;
+      background-color: var(--hover-color);
+      padding: 1rem;
     }
 
     .college-list ul {
@@ -133,22 +136,23 @@
       flex: 1;
       min-width: 200px;
       margin-right: 1rem;
+      font-weight: 500;
     }
 
     .college-link {
-      color: var(--primary-color);
+      color: var(--white);
+      background-color: var(--secondary-color);
       text-decoration: none;
       font-size: 0.85rem;
-      padding: 0.3rem 0.8rem;
+      padding: 0.4rem 0.8rem;
       border-radius: 4px;
-      border: 1px solid var(--primary-color);
       transition: var(--transition);
       white-space: nowrap;
     }
 
     .college-link:hover {
-      background-color: var(--primary-color);
-      color: white;
+      background-color: #D35400;
+      transform: translateY(-2px);
     }
 
     .rank-badge {
@@ -163,6 +167,7 @@
       font-size: 0.8rem;
       margin-right: 0.8rem;
       flex-shrink: 0;
+      font-weight: bold;
     }
 
     .whatsapp-button {
@@ -187,7 +192,7 @@
     .whatsapp-button:hover {
       transform: translateY(-3px);
       box-shadow: 0 6px 16px rgba(0,0,0,0.3);
-      background: #128C7E;
+      background: #2471A3;
     }
 
     .footer {
@@ -201,12 +206,12 @@
     }
 
     .disclaimer {
-      background-color: #fff8e1;
+      background-color: #FEF9E7;
       padding: 1rem;
       border-radius: 8px;
       margin: 1.5rem auto;
       font-size: 0.85rem;
-      border-left: 4px solid #ffc107;
+      border-left: 4px solid var(--secondary-color);
     }
 
     /* Responsive improvements */
@@ -228,6 +233,7 @@
 
       .college-link {
         align-self: flex-end;
+        margin-top: 0.5rem;
       }
 
       .whatsapp-button {
@@ -240,20 +246,11 @@
     @media (max-width: 480px) {
       .college-list li {
         font-size: 0.85rem;
-      padding: 0.7rem;
-      flex-direction: column;
       }
 
       .college-link {
         width: 100%;
         text-align: center;
-        margin-top: 0.5rem;
-      }
-
-      .whatsapp-button {
-        bottom: 0.8rem;
-        right: 0.8rem;
-        padding: 0.6rem 0.9rem;
       }
     }
   </style>
@@ -261,170 +258,154 @@
 <body>
 
   <header>
-    🎓 Top IIITs in India
+    🎓 Top IITs in India
   </header>
 
   <div class="container">
     <div class="intro">
-      <h2>Indian Institutes of Information Technology – Ranked for You</h2>
-      <p>Explore all IIITs across India, ordered by academic strength, placements, infrastructure & industry ties.</p>
+      <h2>Indian Institutes of Technology – Premier Engineering Institutions</h2>
+      <p>Explore all IITs across India, ranked by academic excellence, research output, and placement records.</p>
       
-      <input type="text" class="search-box" placeholder="🔍 Search for IIITs..." id="searchInput">
+      <input type="text" class="search-box" placeholder="🔍 Search for IITs..." id="searchInput">
     </div>
 
     <div class="disclaimer">
-      <strong>Note:</strong> Rankings are based on overall reputation, placements, and academic excellence. Official websites are provided for each institute.
+      <strong>Note:</strong> Rankings are based on NIRF data, academic reputation, and placement statistics. Official websites are provided for each institute.
     </div>
 
     <div class="college-list">
-      <h3>💻 IIIT Rankings (Top to Bottom)</h3>
+      <h3>🏛 IIT Rankings 2023 (Top to Bottom)</h3>
       <ul id="collegeList">
         <li>
           <span class="rank-badge">1</span>
-          <span class="college-name">IIIT Hyderabad (Autonomous)</span>
-          <a href="https://www.iiit.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Madras</span>
+          <a href="https://www.iitm.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">2</span>
-          <span class="college-name">IIIT Bangalore (Deemed)</span>
-          <a href="https://www.iiitb.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Delhi</span>
+          <a href="https://www.iitd.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">3</span>
-          <span class="college-name">IIIT Delhi (State)</span>
-          <a href="https://www.iiitd.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Bombay</span>
+          <a href="https://www.iitb.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">4</span>
-          <span class="college-name">IIIT Allahabad (CFTI)</span>
-          <a href="https://www.iiita.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Kanpur</span>
+          <a href="https://www.iitk.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">5</span>
-          <span class="college-name">IIIT Gwalior (ABV-IIITM, CFTI)</span>
-          <a href="https://www.iiitm.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Kharagpur</span>
+          <a href="https://www.iitkgp.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">6</span>
-          <span class="college-name">IIIT Jabalpur (PDPM-IIITDM)</span>
-          <a href="https://www.iiitdmj.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Roorkee</span>
+          <a href="https://www.iitr.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">7</span>
-          <span class="college-name">IIIT Kancheepuram (IIITDM)</span>
-          <a href="https://www.iiitdm.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Guwahati</span>
+          <a href="https://www.iitg.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">8</span>
-          <span class="college-name">IIIT Guwahati</span>
-          <a href="https://www.iiitg.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Hyderabad</span>
+          <a href="https://www.iith.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">9</span>
-          <span class="college-name">IIIT Sri City (Andhra Pradesh)</span>
-          <a href="https://www.iiits.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Indore</span>
+          <a href="https://www.iiti.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">10</span>
-          <span class="college-name">IIIT Vadodara</span>
-          <a href="https://www.iiitvadodara.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT BHU (Varanasi)</span>
+          <a href="https://www.iitbhu.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">11</span>
-          <span class="college-name">IIIT Kottayam</span>
-          <a href="https://www.iiitkottayam.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Dhanbad (ISM)</span>
+          <a href="https://www.iitism.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">12</span>
-          <span class="college-name">IIIT Una (Himachal Pradesh)</span>
-          <a href="https://www.iiitu.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Ropar</span>
+          <a href="https://www.iitrpr.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">13</span>
-          <span class="college-name">IIIT Lucknow</span>
-          <a href="https://www.iiitl.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Patna</span>
+          <a href="https://www.iitp.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">14</span>
-          <span class="college-name">IIIT Nagpur</span>
-          <a href="https://www.iiitn.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Gandhinagar</span>
+          <a href="https://www.iitgn.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">15</span>
-          <span class="college-name">IIIT Pune</span>
-          <a href="https://www.isquareit.edu.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Bhubaneswar</span>
+          <a href="https://www.iitbbs.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">16</span>
-          <span class="college-name">IIIT Bhagalpur</span>
-          <a href="https://www.iiitbh.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Mandi</span>
+          <a href="https://www.iitmandi.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">17</span>
-          <span class="college-name">IIIT Bhopal</span>
-          <a href="https://www.iiitbhopal.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Jodhpur</span>
+          <a href="https://www.iitj.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">18</span>
-          <span class="college-name">IIIT Dharwad</span>
-          <a href="https://iiitdwd.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Tirupati</span>
+          <a href="https://www.iittp.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">19</span>
-          <span class="college-name">IIIT Ranchi</span>
-          <a href="https://www.iiitranchi.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Palakkad</span>
+          <a href="https://www.iitpkd.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">20</span>
-          <span class="college-name">IIIT Sonipat</span>
-          <a href="https://iiitsonepat.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Dharwad</span>
+          <a href="https://www.iitdh.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">21</span>
-          <span class="college-name">IIIT Surat</span>
-          <a href="https://www.iiitsurat.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Bhilai</span>
+          <a href="https://www.iitbhilai.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
-          <span class="rank-badge"></span>
-          
-          <span class="college-name">IIIT Kurnool (became IIITDM in 2023)</span>
-          <a href="https://iiitk.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="rank-badge">22</span>
+          <span class="college-name">IIT Goa</span>
+          <a href="https://www.iitgoa.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
         <li>
           <span class="rank-badge">23</span>
-          <span class="college-name">IIIT Trichy</span>
-          <a href="https://www.iiitt.ac.in" class="college-link" target="_blank">Visit Website</a>
-        </li>
-        <li>
-          <span class="rank-badge">24</span>
-          <span class="college-name">IIIT Manipur</span>
-          <a href="https://www.iiitmanipur.ac.in" class="college-link" target="_blank">Visit Website</a>
-        </li>
-        <li>
-          <span class="rank-badge">25</span>
-          <span class="college-name">IIIT Kota</span>
-          <a href="https://www.iiitkota.ac.in" class="college-link" target="_blank">Visit Website</a>
-        </li>
-        <li>
-          <span class="rank-badge">26</span>
-          <span class="college-name">IIIT Agartala</span>
-          <a href="https://www.iiitagartala.ac.in" class="college-link" target="_blank">Visit Website</a>
+          <span class="college-name">IIT Jammu</span>
+          <a href="https://www.iitjammu.ac.in" class="college-link" target="_blank">Visit Website</a>
         </li>
       </ul>
     </div>
 
     <div class="disclaimer">
-      <strong>Disclaimer:</strong> This ranking is for informational purposes only. We recommend visiting official websites and conducting thorough research before making any decisions.
+      <strong>Disclaimer:</strong> Rankings may vary based on different parameters. Always verify information from official sources before making decisions.
     </div>
   </div>
 
   <footer class="footer">
     <p>© 2023 Balanju Consultancy. All rights reserved.</p>
-    <p>For admission counseling, contact: <a href="mailto:counseling@balanju.com">counseling@balanju.com</a></p>
+    <p>For admission guidance: <a href="mailto:iit.counseling@balanju.com" style="color: var(--secondary-color);">iit.counseling@balanju.com</a> | Phone: +91-XXXXXX7890</p>
   </footer>
 
-  <a class="whatsapp-button" href="https://wa.me/917207800211?text=Hi%20Balanju%20Team%2C%20I%20need%20counseling%20for%20IIIT%20admission." target="_blank">
-    <i class="fab fa-whatsapp"></i> Chat with Us
+  <a class="whatsapp-button" href="https://wa.me/917207800211?text=Hi%20Balanju%20Team%2C%20I%20need%20counseling%20for%20IIT%20admission." target="_blank">
+    <i class="fab fa-whatsapp"></i> Chat Now
   </a>
 
   <script>
