--- a/index-engineering.html
+++ b/index-engineering.html
@@ -304,17 +304,7 @@
     </font>
 
 </div>
-
-
-
-
-
-
-
   </header>
-
-
-
     <script>
   const updates = [
     {
@@ -375,10 +365,9 @@
       <a href="index-branches.html">📚 Explore Branches</a>
       <a href="index-engineering-college.html">🏫Engineering Colleges</a>
       <a href="index-trending-branc.html">📊 Trending Branches</a>
-      <a href="campus_tours.html">🎥 Campus Tours</a>
-      <a href="placement.html">💼 Placement Statistics</a>
+      
+      <a href="1005-top-college-ind.html">🏫Top Colleges</a>
       <a href="150-Faqs.html">❓ Engineering FAQs</a>
-      <a href="TOP_ENGI.html">🏫Top Colleges</a>
     </div>
   </section>
 
@@ -429,7 +418,7 @@
     <div style="background-color: #fff3cd; padding: 20px; border-radius: 10px; text-align: center; margin: 30px auto;">
         <h2>📝 Need Help with EAMCET Counseling?</h2>
         <p style="font-size: 18px;">We provide expert guidance to help you choose the right branch, college, and career path. Book a 1-on-1 paid counseling session now!</p>
-        <a href="http://127.0.0.1:5500/Engineering/linking/counsilling-page.html" target="_blank">
+        <a href="1000paid-cousilling.html" target="_blank">
             <button style="padding: 10px 20px; background-color: #ff9800; color: white; font-size: 16px; border: none; border-radius: 8px;">💬 Get Counseling Help</button>
         </a>
     </div>
