--- a/index-ts-college.html
+++ b/index-ts-college.html
@@ -333,6 +333,19 @@
         padding: 12px 18px;
       }
     }
+
+
+
+    .info-box {
+  background-color: #ffffff;
+  padding: 20px 25px;
+  border-radius: 12px;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05);
+  margin: 20px 0;
+  font-family: 'Segoe UI', sans-serif;
+  line-height: 1.6;
+}
+
   </style>
 </head>
 <body>
@@ -363,42 +376,44 @@
   </div>
 
   <div class="categories-scroll">
-    <a href="govt.university.html">🏛 EAPCET Colleges</a>
-    <a href="100-ts-20.html">🏫 TOP-20 EAPCET</a>
-    <a href="150-TS-GOVT.html">🎓 GOVT Colleges</a>
-    <a href="autonomous-colleges.html">🏢 T10 GOVT Colleges</a>
+    <a href="150-eamcet-all-colleges.html">🏛 EAPCET Colleges</a>
+    <a href="150-eapcet-cut-offs.html">🎓 Eapcet Cut-off's</a>
+    <a href="999-TS-COLLEGE-PREDUCTOR.HTML">🏫college Predictor</a>
+    
   </div>
 
-  <section id="about">
-    <h2>About Telangana Colleges</h2>
-    <p>Telangana offers a rich variety of top-ranking colleges in engineering, medicine, management, and arts. Major education hubs like Hyderabad, Warangal, and Nizamabad attract students from across India.</p>
-  </section>
+ <div class="info-box">
+  <h3 style="color: #0d47a1; font-weight: bold;">About Telangana Colleges</h3>
+  <p>
+    Telangana is home to over <strong>300 higher education institutions</strong> offering quality programs in engineering, medicine, management, law, and arts. 
+    Among them, <strong>130+ colleges</strong> are located in the capital city of <strong>Hyderabad</strong>, a major educational and technological hub in India. 
+    Renowned institutions like <strong>Osmania University</strong>, <strong>IIIT Hyderabad</strong>, <strong>University of Hyderabad</strong>, and <strong>JNTU Hyderabad</strong> attract students nationwide and internationally.
+    <br><br>
+    Other prominent cities such as <strong>Warangal</strong> and <strong>Nizamabad</strong> also host reputed colleges and universities. Telangana’s institutions are known for strong academic frameworks, industry-aligned programs, and vibrant campus life, making the state a preferred destination for higher education.
+  </p>
+</div>
+
 
   <section id="types">
     <h2>College Types</h2>
     <ul>
-      <li><strong>Government Universities</strong>: Osmania University, JNTU-H, Kakatiya University <a href="govt.university.html">View all</a></li>
-      <li><strong>Private Universities</strong>: ICFAI, Woxsen, Mahindra University <a href="private_university.html">View all</a></li>
-      <li><strong>Deemed Universities</strong>: IIIT-H, GITAM Hyderabad <a href="deemed-universities.html">View all</a></li>
-      <li><strong>Government Colleges</strong>: Government City College, Nizam College <a href="govt-engineering-colleges.html">View all</a></li>
-      <li><strong>Autonomous Colleges</strong>: CBIT, MVSR, MREC <a href="autonomous-colleges.html">View all</a></li>
-      <li><strong>JNTUH-affiliated Colleges</strong>: CBIT, MVSR, MREC <a href="jutu_affilited(ts).html">View all</a></li>
-      <li><strong>OU-affiliated Colleges</strong>: CBIT, MVSR, MREC <a href="ou-affiliated-colleges.html">View all</a></li>
-    </ul>
+  <li><strong>Government Universities</strong>: Osmania University (OU), Jawaharlal Nehru Technological University Hyderabad (JNTUH), Kakatiya University, Telangana University, Mahatma Gandhi University</li>
+  
+  <li><strong>Private Universities</strong>: ICFAI Foundation for Higher Education (IFHE), Woxsen University, Mahindra University, SR University (Warangal), Anurag University, Malla Reddy University</li>
+  
+  <li><strong>Deemed Universities</strong>: International Institute of Information Technology Hyderabad (IIIT-H), GITAM University Hyderabad, BITS Pilani - Hyderabad Campus</li>
+  
+  <li><strong>Government Colleges</strong>: Government City College (Autonomous), Nizam College (Autonomous), Government Degree College for Women (Begumpet), SRR Government Arts & Science College (Karimnagar)</li>
+  
+  <li><strong>Autonomous Colleges</strong>: Chaitanya Bharathi Institute of Technology (CBIT), Vasavi College of Engineering, Gokaraju Rangaraju Institute of Engineering and Technology (GRIET), VNR Vignana Jyothi Institute of Engineering and Technology (VNR VJIET)</li>
+  
+  <li><strong>JNTUH-affiliated Colleges</strong>: Malla Reddy College of Engineering & Technology (MRCET), Institute of Aeronautical Engineering (IARE), Vardhaman College of Engineering, CMR College of Engineering & Technology</li>
+  
+  <li><strong>OU-affiliated Colleges</strong>: Muffakham Jah College of Engineering and Technology (MJCET), Stanley College of Engineering for Women, Methodist College of Engineering & Technology, Deccan College of Engineering and Technology</li>
+</ul>
+
   </section>
 
-  <section id="location">
-    <h2><a href="college ts.html">Search District/City Wise</a></h2>
-    <ul>
-      <li><a href="hyd.html">Hyderabad</a></li>
-      <li><a href="wrangal.html">Warangal</a></li>
-      <li><a href="medchal.html">Medchal-Malkajgiri</a></li>
-      <li><a href="khammam.html">Khammam</a></li>
-      <li><a href="sangareddy.html">Sangareddy</a></li>
-      <li><a href="karimnager.html">Karimnagar</a></li>
-      <li><a href="college ts.html">View all districts</a></li>
-    </ul>
-  </section>
 
   <section id="placements">
     <h2>Colleges with High Placements</h2>
