--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
 <div class="floating-cta" id="ctaBox">
   <span class="close-btn" onclick="document.getElementById('ctaBox').style.display='none'">✖</span>
   <span class="cta-message"></span>
-  <a href="1000paid-cousilling.html" class="cta-button">EAPCET Counseling Support</a>
+  <a href="1000paid-cousilling.html" class="cta-button">EAMPCET Counseling Support</a>
 </div>
 
 
@@ -723,10 +723,9 @@
       <h2 class="section-title">🎓 EAPCET Quick Access</h2>
       <div class="eamcet-buttons">
         <a href="1000paid-cousilling.html" class="eamcet-btn">🎯Counselling support</a>
-        <a href="999-TS-COLLEGE-FILTER..html" class="eamcet-btn">✅ College Filter</a>
+        <a href="150-ts-FILTER.html" class="eamcet-btn">✅ College Filter</a>
         <a href="999-TS-COLLEGE-PREDUCTOR.HTML" class="eamcet-btn">📊 College Predictor</a>
-     
-        <a href="100-ts-20.html" class="eamcet-btn">🏆 Top Colleges</a>
+        <a href="150-eamcet-all-colleges.html" class="eamcet-btn">🏆 EAPCET Colleges</a>
       </div>
     </section>
 
@@ -994,16 +993,17 @@
 
  
   { name: "TS EAMCET Cut Off", link: "01-cut-off.html", icon: "📉", desc: "Latest TS EAMCET cutoff ranks by college & category." },
+  { name: "eapcet 2024 cut off's", link: "150-eapcet-cut-offs.html", icon: "📉", desc: "Latest TS EAMCET cutoff ranks by college & category." },
   { name: "BITSAT Exam", link: "10BITSAT.html", icon: "🎯", desc: "Birla Institute of Technology Admission Test details." },
   { name: "Anurag University", link: "121-ts-anurag-university.html", icon: "🏫", desc: "Anurag University – course, fees, placement info." },
   
   { name: "College Profile Template", link: "1003-college-profile.html", icon: "📄", desc: "Sample layout for individual college profiles." },
-    {
+  {
   name: "TS EAPCET All Engineering Colleges List",
   link: "150-eamcet-all-colleges.html",
   icon: "📄",
   desc: "Complete list of all engineering colleges in Telangana under TS EAPCET."
-}
+},
 
 
 
@@ -1011,8 +1011,11 @@
 
 
 
-
-
+/*NATIONAL LEVEL*/
+{ name: "IIT Directory", link: "23-IIT-index.html", icon: "🏫", desc: "Comprehensive profiles of Indian Institutes of Technology (IITs)." },
+{ name: "NIT Directory", link: "23-nit-index.html", icon: "🏫", desc: "Detailed profiles of National Institutes of Technology (NITs)." },
+{ name: "IIIT Directory", link: "23index-iiit.html", icon: "🏫", desc: "Information and profiles of Indian Institutes of Information Technology (IIITs)." },
+{ name: "GFTI Directory", link: "23-gfti-index.html", icon: "🏫", desc: "Institutional profiles of Government Funded Technical Institutes (GFTIs)." }
 
 
 
