--- a/index-trending-branc.html
+++ b/index-trending-branc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Balanju Consultancy | Branches Info</title>
+    <title>Branches Info |  Balanju Consultancy |</title>
     <style>
         body {
             margin: 0;
@@ -143,7 +143,7 @@
 <body>
 
     <header>
-        🚀 Welcome to BALANJU EAPCET  CONSALTENCY 🚀
+        🚀Trending-Branches🚀
     </header>
 
     <div class="intro">
@@ -156,16 +156,19 @@
     </div>
 
     <div class="branches">
-        <div class="branch-link"><a href="cse.html">💻 CSE</a></div>
-        <div class="branch-link"><a href="AIML.html">🤖 AIML</a></div>
-        <div class="branch-link"><a href="CYBER.html">🔐 Cyber Security</a></div>
-        <div class="branch-link"><a href="IT.html">💾 IT</a></div>
-        <div class="branch-link"><a href="IOT.html">🌐 IoT</a></div>
-        <div class="branch-link"><a href="ece.html">📡 ECE</a></div>
-        <div class="branch-link"><a href="eee.html">⚡ EEE</a></div>
-        <div class="branch-link"><a href="civil.html">🏗️ Civil</a></div>
-        <div class="branch-link"><a href="mech.html">⚙️ Mechanical</a></div>
-        <div class="branch-link"><a href="chemical.html">🧪 Chemical</a></div>
+        <div class="branch-link"><a href="13cse.html">💻 CSE</a></div>
+    <div class="branch-link"><a href="13AIML.html">🤖 AIML</a></div>
+    <div class="branch-link"><a href="13CYBER.html">🔐 Cyber Security</a></div>
+    <div class="branch-link"><a href="13IT.html">💾 IT</a></div>
+    <div class="branch-link"><a href="13IOT.html">🌐 IoT</a></div>
+    <div class="branch-link"><a href="13data_science.html">📊 Data Science</a></div>
+    <div class="branch-link"><a href="13software engineering.html">💻 Software Engi</a></div>
+    <div class="branch-link"><a href="13cloud_computing.html">☁️ Cloud Computing</a></div>
+
+    <div class="branch-link"><a href="14ece.html">📡 ECE</a></div>
+    <div class="branch-link"><a href="14eee.html">⚡ EEE</a></div>
+    <div class="branch-link"><a href="14civil.html">🏗️ Civil</a></div>
+    <div class="branch-link"><a href="14mech.html">⚙️ Mechanical</a></div>
        
         
     </div>
