--- a/index.html
+++ b/index.html
@@ -876,6 +876,45 @@
   <script>
     const searchData = [
 
+
+
+
+/*INDEXES*/
+/*states*/
+
+   
+  { name: "Andhra Pradesh (AP COLLEGE INDEX)", link: "index-ap-college.html", icon: "🏫", desc: "Explore top colleges in Andhra Pradesh." },
+  { name: "Telangana (TS COLLEGE INDEX)", link: "index-ts-college.html", icon: "🏫", desc: "Explore top colleges in Telangana." },
+  { name: "Maharashtra (MH COLLEGE INDEX)", link: "index-maharastha-college.html", icon: "🏫", desc: "Explore top colleges in Maharashtra." },
+  { name: "Delhi (DELHI COLLEGE INDEX)", link: "index-dehli-college.html", icon: "🏫", desc: "Explore top colleges in Delhi." },
+  { name: "Karnataka (KA COLLEGE INDEX)", link: "index-karnataka-college-index.html", icon: "🏫", desc: "Explore top colleges in Karnataka." },
+  { name: "Tamil Nadu (TN COLLEGE INDEX)", link: "index-THAMIL-COLLEGE.html", icon: "🏫", desc: "Explore top colleges in Tamil Nadu." },
+  { name: "Kerala (KL COLLEGE INDEX)", link: "index-kerala-college.html", icon: "🏫", desc: "Explore top colleges in Kerala." },
+  { name: "Uttar Pradesh (UP COLLEGE INDEX)", link: "index-uttarprad-college.html", icon: "🏫", desc: "Explore top colleges in Uttar Pradesh." },
+  { name: "Bihar (BR COLLEGE INDEX)", link: "index-bihar-college.html", icon: "🏫", desc: "Explore top colleges in Bihar." },
+  { name: "West Bengal (WB COLLEGE INDEX)", link: "index-west-bengal-college.html", icon: "🏫", desc: "Explore top colleges in West Bengal." },
+  { name: "Rajasthan (RJ COLLEGE INDEX)", link: "index-rajasthan-college.html", icon: "🏫", desc: "Explore top colleges in Rajasthan." },
+  { name: "Gujarat (GJ COLLEGE INDEX)", link: "index-gujarath-college.html", icon: "🏫", desc: "Explore top colleges in Gujarat." },
+  { name: "Madhya Pradesh (MP COLLEGE INDEX)", link: "index-madhyaprad-college.html", icon: "🏫", desc: "Explore top colleges in Madhya Pradesh." },
+  { name: "Haryana (HR COLLEGE INDEX)", link: "index-haryana-college.html", icon: "🏫", desc: "Explore top colleges in Haryana." },
+  { name: "Punjab (PB COLLEGE INDEX)", link: "index-pb-college.html", icon: "🏫", desc: "Explore top colleges in Punjab." },
+  { name: "Jharkhand (JH COLLEGE INDEX)", link: "index-jarkhand-college.html", icon: "🏫", desc: "Explore top colleges in Jharkhand." },
+  { name: "Chhattisgarh (CG COLLEGE INDEX)", link: "index-chhattisgarh-college.html", icon: "🏫", desc: "Explore top colleges in Chhattisgarh." },
+  { name: "Odisha (OD COLLEGE INDEX)", link: "index-odisha-college.html", icon: "🏫", desc: "Explore top colleges in Odisha." },
+  { name: "Assam (AS COLLEGE INDEX)", link: "index-assam-college.html", icon: "🏫", desc: "Explore top colleges in Assam." },
+  { name: "Himachal Pradesh (HP COLLEGE INDEX)", link: "index-hemachal-college.html", icon: "🏫", desc: "Explore top colleges in Himachal Pradesh." },
+  { name: "Uttarakhand (UK COLLEGE INDEX)", link: "index-uttarakhand-college.html", icon: "🏫", desc: "Explore top colleges in Uttarakhand." },
+  { name: "Goa (GA COLLEGE INDEX)", link: "index-ga-college.html", icon: "🏫", desc: "Explore top colleges in Goa." },
+  { name: "Tripura (TR COLLEGE INDEX)", link: "index-tripura-college.html", icon: "🏫", desc: "Explore top colleges in Tripura." },
+  { name: "Meghalaya (ML COLLEGE INDEX)", link: "index-meghalaya-college.html", icon: "🏫", desc: "Explore top colleges in Meghalaya." },
+  { name: "Manipur (MN COLLEGE INDEX)", link: "index-manipur-college.html", icon: "🏫", desc: "Explore top colleges in Manipur." },
+  { name: "Nagaland (NL COLLEGE INDEX)", link: "index-nagaland-college.html", icon: "🏫", desc: "Explore top colleges in Nagaland." },
+  { name: "Mizoram (MZ COLLEGE INDEX)", link: "index-mezoram-college.html", icon: "🏫", desc: "Explore top colleges in Mizoram." },
+  { name: "Sikkim (SK COLLEGE INDEX)", link: "index-sikkim-college.html", icon: "🏫", desc: "Explore top colleges in Sikkim." },
+  { name: "Arunachal Pradesh (AR COLLEGE INDEX)", link: "index-arunachal-college.html", icon: "🏫", desc: "Explore top colleges in Arunachal Pradesh." },
+  
+
+
     
   { name: "Cut-off Analysis", link: "01-cut-off.html", icon: "📉", desc: "Explore previous year cut-off scores and trends." },
   { name: "TS EAMCET Updated", link: "01-ts-eamcet-updated.html", icon: "🧾", desc: "Latest updates and info on TS EAMCET." },
@@ -1004,6 +1043,11 @@
   icon: "📄",
   desc: "Complete list of all engineering colleges in Telangana under TS EAPCET."
 },
+
+
+
+/*ANDHARA PRADESH (AP)*/
+
 
 
 
