--- a/index.html
+++ b/index.html
@@ -635,8 +635,8 @@
       </div>
     </div><font color="black">
     <div class="floating-update-bar header-version" id="updateBar">
-  <span id="updateText">📢 TS EAMCET 2024 Cutoffs Updated!</span>
-  <a href="01-cut-off.html" class="update-btn" id="updateLink">View</a>
+  <span id="updateText">📢 EAPCET  College Predictor launched!</span>
+  <a href="999-TS-COLLEGE-PREDUCTOR.HTML" class="update-btn" id="updateLink">View</a>
     </font>
 
 </div>
@@ -664,26 +664,16 @@
 
   <script>
   const updates = [
+   
     {
-      text: "📢 TS EAMCET 2024 Cutoffs Updated!",
-      link: "01-cut-off.html"
+      text: "📢EAPCET 2024 CUT OFF'S RESORCES",
+      link: "150-eapcet-cut-offs.html"
     },
     {
-      text: "🗓️ Counseling starts from June 15",
-      link: "01-ts-eamcet-updated.html"
+      text: "🎯 TS COLLEGE INDEX",
+      link: "index-ts-college.html"
     },
-    {
-      text: "🎯 College Predictor Tool Launched",
-      link: "999-TS-COLLEGE-PREDUCTOR.HTML"
-    },
-    {
-      text: "📚 Branch-wise Cutoffs Uploaded",
-      link: "index-branches.html"
-    },
-    {
-      text: "🏆 View Top Colleges for CSE, AI & DS",
-      link: "100-ts-20.html"
-    }
+
   ];
 
   let index = 0;
@@ -723,9 +713,10 @@
       <h2 class="section-title">🎓 EAPCET Quick Access</h2>
       <div class="eamcet-buttons">
         <a href="1000paid-cousilling.html" class="eamcet-btn">🎯Counselling support</a>
-        <a href="150-ts-FILTER.html" class="eamcet-btn">✅ College Filter</a>
-        <a href="999-TS-COLLEGE-PREDUCTOR.HTML" class="eamcet-btn">📊 College Predictor</a>
-        <a href="150-eamcet-all-colleges.html" class="eamcet-btn">🏆 EAPCET Colleges</a>
+         <a href="999-TS-COLLEGE-PREDUCTOR.HTML" class="eamcet-btn">📊 College Predictor</a>
+        <a href="150-eapcet-cut-offs.html" class="eamcet-btn">✅ CUT OFF'S RESORCES</a>
+        
+        <a href="150-eamcet-all-colleges.html" class="eamcet-btn">🏆Colleg filter & CODES</a>
       </div>
     </section>
 
