--- a/index.html
+++ b/index.html
@@ -649,6 +649,19 @@
 
 
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CFEBSZ4294"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CFEBSZ4294');
+</script>
+
+
+
+
 
 
 
@@ -658,6 +671,9 @@
 
 
   </header>
+
+
+
 
 
 
