--- a/index.html
+++ b/index.html
@@ -1154,10 +1154,10 @@
           <p><i class="fas fa-map-marker-alt"></i> Hyderabad, Telangana</p>
         </div>
         <div class="social-media">
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+         <a href="https://chat.whatsapp.com/K5D4AfvukoY2vL07cfPYh0"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://youtube.com/@balanjuconsultancy1?si=3s4r6SGrs-r2JKrx"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.instagram.com/balanju_consultancy?igsh=MXB6NmNuaGJ2azA3bg=="><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/balaji-nayak-027050360?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
     </div>
