--- a/index.html
+++ b/index.html
@@ -1024,9 +1024,9 @@
 
     <!-- Video Section -->
     <section>
-      <h2 class="section-title">📺 Watch Our Introduction</h2>
+      <h2 class="section-title">📺 Watch CSE Info</h2>
       <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID_HERE" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kLJHlmXdYK0?si=sTUg5-yNKC3tF7M1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </section>
 
