--- a/13cse.html
+++ b/13cse.html
@@ -85,73 +85,53 @@
             border-radius: 8px;
         }
 
-        /* 📱 Enhanced Responsive Design */
-@media (max-width: 768px) {
-  .main-header {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 15px;
-    padding: 20px 15px;
-  }
+        .video-section {
+            max-width: 1000px;
+            margin: 40px auto;
+            text-align: center;
+        }
 
-  .main-header .left h1 {
-    font-size: 22px;
-  }
+        .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            margin-top: 15px;
+        }
 
-  .main-header .right {
-    width: 100%;
-    margin-left: 0;
-    font-size: 13px;
-    padding: 8px 10px;
-  }
+        .video-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
 
-  .scroll-text {
-    font-size: 13px;
-  }
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px;
+            }
 
-  .hero h2 {
-    font-size: 24px;
-  }
+            .buttons a button {
+                width: 100%;
+                font-size: 15px;
+            }
 
-  .hero p {
-    font-size: 16px;
-  }
-
-  .hero .btn {
-    display: block;
-    width: 100%;
-    margin: 10px 0;
-    font-size: 15px;
-  }
-
-  .section {
-    padding: 20px 15px;
-  }
-
-  .section h3 {
-    font-size: 20px;
-  }
-
-  .section p {
-    font-size: 15px;
-  }
-
-  .btn {
-    font-size: 14px;
-    padding: 10px 15px;
-    width: 100%;
-    box-sizing: border-box;
-    text-align: center;
-  }
-}
-
+            .counseling button {
+                width: 100%;
+                font-size: 15px;
+            }
+        }
     </style>
 </head>
 <body>
 
 <header>
-
-    CSE – Computer Science and Engineering</header>
+    CSE – Computer Science and Engineering
+</header>
 
 <div class="container">
     <h2>📘 Overview</h2>
@@ -221,6 +201,15 @@
         <li>✅ Foundation for AI, Robotics, Blockchain, and Quantum Computing</li>
     </ul>
 
+    
+<div class="video-section">
+    <h2>📺 Watch CSE Info</h2>
+    <div class="video-wrapper">
+        <iframe src="https://www.youtube.com/embed/kLJHlmXdYK0?rel=0"
+                title="CSE Course Info" allowfullscreen></iframe>
+    </div>
+</div>
+
     <div class="counseling">
         <h3>📌 Need Help with EAMCET Counseling?</h3>
         <p>Book our <strong>1-on-1 paid counseling</strong> for expert guidance in selecting the right branch!</p>
@@ -234,6 +223,8 @@
         <a href="index-branches.html"><button class="home-btn">🏠 Back to Home</button></a>
     </div>
 </div>
+
+
 
 </body>
 </html>
