--- a/index.html
+++ b/index.html
@@ -880,6 +880,7 @@
 
   
 </head>
+   <link rel="icon" type="image/png" href="  https://i.postimg.cc/cLMSjKCq/Upload-from-mobile-1750140414-Screenshot-20250616-190853-Whats-App-Business.png">
 <body>
   <!-- Header Section -->
   <header class="main-header">
