--- a/13cse.html
+++ b/13cse.html
@@ -127,6 +127,9 @@
         }
     </style>
 </head>
+
+  <link rel="icon" type="image/png" href=" https://i.postimg.cc/kgF2cgdG/consultancy-logo.jpg">
+
 <body>
 
 <header>
