--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
         <i class="fas fa-laptop-code"></i>
         Engineering
       </a>
-      <a href="900-demo-degree.html" class="quick-link">
+      <a href="index-degree.html" class="quick-link">
         <i class="fas fa-graduation-cap"></i>
         Degree
       </a>
