--- a/index-degree.html
+++ b/index-degree.html
@@ -531,21 +531,35 @@
       <a href="#" class="box"><i class="fas fa-landmark"></i>Mahatma Gandhi University</a>
       <a href="#" class="box"><i class="fas fa-landmark"></i>Satavahana University</a>
       <a href="#" class="box"><i class="fas fa-landmark"></i>JNTU Hyderabad</a>
-      <a href="#" class="box"><i class="fas fa-landmark"></i>Potti Sreeramulu Telugu University</a>
-      <a href="#" class="box"><i class="fas fa-landmark"></i>Dr. B.R. Ambedkar Open University</a>
-      <a href="#" class="box"><i class="fas fa-landmark"></i>Maulana Azad National Urdu University</a>
+      <a href="#" class="box"><i class="fas fa-landmark"></i>Potti Sreeramulu Uni</a>
+      <a href="#" class="box"><i class="fas fa-landmark"></i>Dr. B.R. Ambedkar Uni</a>
+      
     </div>
   </div>
+<div class="container">
+  <h2>🎓 Telangana Degree Admissions Journey</h2>
+  <div class="grid">
+    <a href="dost-info.html" class="box">
+      <i class="fas fa-globe"></i>
+      Through DOST
+      <h4>Govt & Aided colleges (Inter marks based)</h4>
+    </a>
+    <a href="direct-admission-info.html" class="box">
+      <i class="fas fa-handshake"></i>
+      Direct College Admission
+      <h4>Management quota </h4>
+    </a>
+    <a href="university-exam-info.html" class="box">
+      <i class="fas fa-pen-alt"></i>
+      University Entrance Exams
+      <h4>(CUET / internal test)</h4>
+    </a>
+  </div>
+</div>
 
-  <section>
-    <h2>📝 Popular Entrance Exams</h2>
-    <div class="menu">
-      <a href="#">📖 CUET (Common University Entrance Test)</a>
-      <a href="#">🏫 DOST (Delhi University Open Selection Test)</a>
-      <a href="#">🧠 Private University Entrance Tests</a>
-      <a href="#">📊 State University Entrance Exams</a>
-    </div>
-  </section>
+
+
+
 
   <!-- New Footer -->
   <footer class="engineering-footer">
