--- a/index-degree.html
+++ b/index-degree.html
@@ -452,7 +452,7 @@
   <header class="main-header">
     <div class="header-top">
       <div class="header-text">
-        <h1><font face="roboto">🎓EXPLORE <br>DEGREE  PROGRAMS</font></h1>
+        <h1><font face="roboto">🎓DEGREE  PROGRAMS</font></h1>
       </div>
     </div>
     <font color="black">
@@ -542,7 +542,7 @@
     <a href="dost-info.html" class="box">
       <i class="fas fa-globe"></i>
       Through DOST
-      <h4>Govt & Aided colleges (Inter marks based)</h4>
+      <h4>(Inter marks based)</h4>
     </a>
     <a href="direct-admission-info.html" class="box">
       <i class="fas fa-handshake"></i>
