--- a/index-degree.html
+++ b/index-degree.html
@@ -452,7 +452,7 @@
   <header class="main-header">
     <div class="header-top">
       <div class="header-text">
-        <h1><font face="roboto">🎓DEGREE  PROGRAMS</font></h1>
+        <h1><font face="roboto">🚀BALANJU<br> Degree Guide</font></h1>
       </div>
     </div>
     <font color="black">
