--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 <link rel="icon" type="image/png" sizes="192x192" href="/images/favicon/android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="512x512" href="/images/favicon/android-chrome-512x512.png">
 <link rel="manifest" href="/images/favicon/site.webmanifest">
+  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Balanju Consultancy",
+  "url": "https://www.balanju.com",
+  "logo": "https://www.balanju.com/images/favicon/android-chrome-512x512.png"
+}
+</script>
+
 
   <style>
     :root {
